gitops/manifests/flink/1-manifest/v1-namespace-default-ns-flink.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app.kubernetes.io/managed-by: pulumi
  name: ns-flink
