gitops/manifests/flink/1-manifest/apps_v1-deployment-ns-flink-flink-kubernetes-operator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/managed-by: pulumi
    app.kubernetes.io/name: flink-kubernetes-operator
    app.kubernetes.io/version: 1.12.1
    helm.sh/chart: flink-kubernetes-operator-1.12.1
  name: flink-kubernetes-operator
  namespace: ns-flink
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: flink-kubernetes-operator
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-container: flink-kubernetes-operator
      labels:
        app.kubernetes.io/name: flink-kubernetes-operator
    spec:
      containers:
      - command:
        - /docker-entrypoint.sh
        - operator
        image: ghcr.io/apache/flink-kubernetes-operator:0315e91
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /
            port: health-port
          initialDelaySeconds: 30
          periodSeconds: 10
        name: flink-kubernetes-operator
        ports:
        - containerPort: 8085
          name: health-port
          protocol: TCP
        resources: {}
        securityContext: {}
        startupProbe:
          failureThreshold: 30
          httpGet:
            path: /
            port: health-port
          periodSeconds: 10
        volumeMounts:
        - mountPath: /opt/flink/conf
          name: flink-operator-config-volume
        - mountPath: /opt/flink/artifacts
          name: flink-artifacts-volume
      - command:
        - /docker-entrypoint.sh
        - webhook
        image: ghcr.io/apache/flink-kubernetes-operator:0315e91
        imagePullPolicy: IfNotPresent
        name: flink-webhook
        resources: {}
        securityContext: {}
        volumeMounts:
        - mountPath: /certs
          name: keystore
          readOnly: true
        - mountPath: /opt/flink/conf
          name: flink-operator-config-volume
      securityContext:
        runAsGroup: 9999
        runAsUser: 9999
      serviceAccountName: flink-operator
      volumes:
      - configMap:
          items:
          - key: flink-conf.yaml
            path: flink-conf.yaml
          - key: log4j-operator.properties
            path: log4j-operator.properties
          - key: log4j-console.properties
            path: log4j-console.properties
          name: flink-operator-config
        name: flink-operator-config-volume
      - emptyDir: {}
        name: flink-artifacts-volume
      - name: keystore
        secret:
          items:
          - key: keystore.p12
            path: keystore.p12
          secretName: webhook-server-cert
