gitops/manifests/flink/1-manifest/v1-service-ns-flink-flink-operator-webhook-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/managed-by: pulumi
  name: flink-operator-webhook-service
  namespace: ns-flink
spec:
  ports:
  - port: 443
    targetPort: 9443
  selector:
    app.kubernetes.io/name: flink-kubernetes-operator
